feat: Adiciona dependências do Ikonli e atualiza build